msm: Enable vmalloc savings option
Change-Id: I5347903f8bb1dc08881b9a818904189cb101b477

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -156,7 +156,7 @@ config ARCH_MSM8960
 	select MSM_SPM_V2
 	select MSM_L2_SPM
 	select MSM_NATIVE_RESTART
-	select DONT_MAP_HOLE_AFTER_MEMBANK0
+	select ENABLE_VMALLOC_SAVINGS
 	select MSM_REMOTE_SPINLOCK_SFPB
 	select ARCH_SPARSEMEM_ENABLE
 	select ARCH_HAS_HOLES_MEMORYMODEL
@@ -197,7 +197,6 @@ config ARCH_MSM8930
 	select MSM_SPM_V2
 	select MSM_L2_SPM
 	select MSM_NATIVE_RESTART
-	select DONT_MAP_HOLE_AFTER_MEMBANK0
 	select MSM_REMOTE_SPINLOCK_SFPB
 	select ARCH_SPARSEMEM_ENABLE
 	select ARCH_HAS_HOLES_MEMORYMODEL
@@ -210,6 +209,7 @@ config ARCH_MSM8930
 	select MSM_IOMMU_GPU_SYNC
 	select MSM_CPU_PWRCTL
 	select GENERIC_TIME_VSYSCALL
+	select ENABLE_VMALLOC_SAVINGS
 	select USE_USER_ACCESSIBLE_TIMERS
 	select ARM_USE_USER_ACCESSIBLE_TIMERS
 	select MSM_USE_USER_ACCESSIBLE_TIMERS
@@ -243,6 +243,7 @@ config ARCH_APQ8064
 	select MSM_CPU_PWRCTL
 	select HAVE_NMI_WATCHDOG if MSM_WATCHDOG || MSM_WATCHDOG_V2
 	select GENERIC_TIME_VSYSCALL
+    select ENABLE_VMALLOC_SAVINGS
 	select USE_USER_ACCESSIBLE_TIMERS
 	select ARM_USE_USER_ACCESSIBLE_TIMERS
 	select MSM_USE_USER_ACCESSIBLE_TIMERS
