--- a/arch/arm/configs/viskan_huashan_defconfig
+++ b/arch/arm/configs/viskan_huashan_defconfig
@@ -268,14 +268,9 @@ CONFIG_RAMDUMP_CRASH_LOGS=y
 CONFIG_CRASH_NOTES=y
 CONFIG_USB_HSIC_SMSC_HUB=y
 CONFIG_SCSI=y
-CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
-CONFIG_CHR_DEV_SG=y
-CONFIG_CHR_DEV_SCH=y
 CONFIG_SCSI_MULTI_LUN=y
-CONFIG_SCSI_CONSTANTS=y
-CONFIG_SCSI_LOGGING=y
-CONFIG_SCSI_SCAN_ASYNC=y
+# CONFIG_SCSI_LOWLEVEL is not set
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
