--- a/arch/arm/configs/viskan_huashan_defconfig
+++ b/arch/arm/configs/viskan_huashan_defconfig
@@ -610,16 +610,18 @@ CONFIG_FUSE_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_VFAT_FS_NO_DUALNAMES=y
+CONFIG_FAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_EXFAT_FS=y
+CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
+CONFIG_SDFAT_CHECK_RO_ATTR=y
+# CONFIG_SDFAT_DEBUG is not set
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_CONFIGFS_FS=y
 CONFIG_ECRYPT_FS=y
 CONFIG_SDCARD_FS=y
 CONFIG_CIFS=y
-CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
-CONFIG_NLS_ISO8859_1=y
 CONFIG_PRINTK_TIME=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_LOCKUP_DETECTOR=y
