--- a/arch/arm/configs/viskan_huashan_defconfig
+++ b/arch/arm/configs/viskan_huashan_defconfig
@@ -27,6 +27,7 @@ CONFIG_BLK_DEV_INITRD=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
+# CONFIG_PERF_EVENTS is not set
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
@@ -46,9 +47,10 @@ CONFIG_MACH_VISKAN_HUASHAN=y
 # CONFIG_MSM_PROC_COMM is not set
 CONFIG_MSM_SMD=y
 CONFIG_MSM_SMD_PKG4=y
+# CONFIG_MSM_SMD_DEBUG is not set
 CONFIG_MSM_BAM_DMUX=y
 # CONFIG_MSM_RESET_MODEM is not set
-CONFIG_MSM_IPC_LOGGING=y
+# CONFIG_MSM_SMD_LOGGING is not set
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 CONFIG_MSM_IPC_ROUTER_HSIC_XPRT=y
@@ -65,19 +67,12 @@ CONFIG_MSM_PIL_GSS=y
 CONFIG_MSM_MODEM_8960=y
 CONFIG_MSM_LPASS_8960=y
 CONFIG_MSM_WCNSS_SSR_8960=y
-CONFIG_MSM_TZ_LOG=y
-CONFIG_MSM_RPM_LOG=y
-CONFIG_MSM_RPM_STATS_LOG=y
-CONFIG_MSM_RPM_RBCPR_STATS_LOG=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_BUS_SCALING=y
 CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED=y
 CONFIG_MSM_WATCHDOG=y
 CONFIG_MSM_DLOAD_MODE=y
 CONFIG_CODEC_MICBIAS_WITH_CAPACITANCE=y
-CONFIG_MSM_RTB=y
-CONFIG_MSM_RTB_SEPARATE_CPUS=y
-CONFIG_MSM_EBI_ERP=y
 CONFIG_MSM_DCVS=y
 CONFIG_RTC_SEMC_ETS=y
 CONFIG_MSM_HSIC_SYSMON=y
@@ -113,7 +108,6 @@ CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_PM_RUNTIME=y
-CONFIG_PM_DEBUG=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
@@ -616,13 +610,11 @@ CONFIG_LOCKUP_DETECTOR=y
 CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_DEBUG_PREEMPT is not set
-CONFIG_DEBUG_MEMORY_INIT=y
 # CONFIG_RCU_CPU_STALL_VERBOSE is not set
 # CONFIG_EVENT_POWER_TRACING_DEPRECATED is not set
 CONFIG_ENABLE_DEFAULT_TRACERS=y
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
 CONFIG_KEYS=y
-CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM_MMAP_MIN_ADDR=4096
