--- a/arch/arm/configs/viskan_huashan_defconfig
+++ b/arch/arm/configs/viskan_huashan_defconfig
@@ -516,6 +516,7 @@ CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_GPIO=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_PRIMA_WLAN=y
 CONFIG_PRIMA_WLAN_LFR=y
